# threatlevel

./: .add-sources  .gitignore  AST.hs  Base.hs  CSS.hs  Common.hs  Cookie.hs  DOM.hs  HTML.hs  HTTP.hs  HTTP_Common.hs  HTTP_Header.hs  HTTP_Netw.hs  HTTP_Request.hs  HTTP_Response.hs  HTTP_Response_InlineFile.hs  HTTP_URL.hs  HTTP_Util.hs  IdentifierSource.hs  IndexedDB.hs  JS.hs  JS_API.hs  JS_Blaze.hs  JS_DOM.hs  JS_Derive.hs  JS_Monad.hs  JS_Ops_Typed.hs  JS_Ops_Untyped.hs  JS_Syntax.hs  JS_Types.hs  JS_X.hs  Lexic.hs  Pr.hs  README.md  SVG.hs  SimpleServer.hs  TH.hs  Test.hs  URL.hs  WW.hs  (+15 more)
CSS/: Example.hs  Internal.hs  MediaQuery.hs  Monad.hs  Shorthands.hs
DOM/: Core.hs  Event.hs  Internal.hs  JS.hs
HTML/: Blaze.hs  Core.hs  Examples.hs  Paste.hs  Render.hs  Shorthands.hs
HTML/Blaze/: Bootstrap.hs
HTML/Shorthands/: Paste.hs
HTTP/: Common.hs  Header.hs  Netw.hs  Request.hs  Response.hs
JS/: API.hs  Blaze.hs  Core.hs  DOM.hs  Render.hs  Roundtrip.hs  Syntax.hs  Upstream.hs
SVG/: Attributes.hs  Elements.hs  Examples.hs
URL/: ToPayload.hs
Web/: Blaze.hs  CSS.hs  Endpoint.hs  FRP.hs  HTML.hs  Monad.hs  Response.hs  SVG.hs  Static.hs
Web/Blaze/: Bootstrap.hs
Web/CSS/: Example.hs  Internal.hs  MediaQuery.hs  Monad.hs  MonadOld.hs  (+1 more)
X/: Widgets.hs
XML/: Core.hs  Render.hs
examples/: Main.hs
identifiers/: Identifiers.hs  README.md  identifiers.cabal  package.yaml
identifiers/Identifiers/: Infinite.hs
identifiers/benchmarks/: identifier-source.hs
multiline/: CHANGELOG.md  LICENSE  multiline.cabal  package.yaml
nix/: local-deps.patch  nixpkgs-config-nixos.nix
render/: Render.hs  package.yaml  render.cabal  stack.yaml
scripts/: fw.sh
stuff/: index.html  script.js
tests/: simple-uses.hs  test.hs
threatlevel-browser/: LICENSE  package.yaml  threatlevel-browser.cabal
threatlevel-common/: package.yaml  threatlevel-common.cabal
threatlevel-common/Common/: BasePreludeReExports.hs  Polysemy.hs  Prelude.hs  TH.hs
threatlevel-css/: CSS.hs  package.yaml  threatlevel-css.cabal  web-css.cabal
threatlevel-css/CSS/: DSL.hs  Identifiers.hs  Monad.hs  Syntax.hs  TH.hs
threatlevel-css/CSS/DSL/: Common.hs  MTL.hs  MTL2.hs  Polysemy.hs
threatlevel-css/CSS/DSL/MTL/: Effect.hs  Mono.hs
threatlevel-css/CSS/DSL/Polysemy/: Base.hs  Effect.hs
threatlevel-css/CSS/Syntax/: AST.hs  Render.hs
threatlevel-css/CSS/TH/: Generated.hs  Internal.hs
threatlevel-css/sample/: Main.hs  mtl2-effect.hs  polysemy-effect.hs
threatlevel-js/: JS.hs  package.yaml  threatlevel-js.cabal
threatlevel-js/JS/: API.hs  Console.hs  DSL.hs  Derive.hs  Event.hs  Lib.hs  Roundtrip.hs  Syntax.hs  TH.hs
threatlevel-js/JS/Apis/: Console.hs  EventLoop.hs
threatlevel-js/JS/BuiltIns/: Array.hs  Date.hs  Full.hs  Number.hs  Object.hs  Promise.hs  String.hs
threatlevel-js/JS/DSL/: Core.hs  MTL.hs  Polysemy.hs  Syntax.hs
threatlevel-js/JS/DSL/MTL/: Core.hs  Effect.hs  Function.hs  Mono.hs
threatlevel-js/JS/DSL/Polysemy/: Base.hs  Core.hs  Effect.hs  Function.hs  Mono.hs
threatlevel-js/JS/Lib/: Async.hs  Sleep.hs
threatlevel-js/JS/Syntax/: AST.hs  Render.hs  Reserved.hs  Types.hs
threatlevel-js/sample/: dsl-mtl-function.hs  dsl-mtl.hs  dsl-polysemy.hs  minimal-works.hs  mtl-multi.hs
threatlevel-unsorted/: CSP.hs  Cookie.hs  Server.hs  Template.hs  ToPayload.hs  Trie.hs  X.hs  package.yaml  threatlevel-unsorted.cabal
threatlevel-unsorted/HTTP/: Common.hs  Header.hs  Response.hs
threatlevel-unsorted/HTTP/Response/: InlineFile.hs
threatlevel-unsorted/JW/: T.hs
threatlevel-unsorted/Server/: API.hs  Hot.hs  Response.hs  Run.hs  Sessions.hs  Static.hs  Wai.hs  WebSocket.hs
threatlevel-unsorted/Template/: Common.hs  V2.hs  V3.hs
threatlevel-unsorted/Web/: Monad.hs
threatlevel-unsorted/Widgets/: Menu.hs
threatlevel-unsorted/X/: Cookie.hs  Widgets.hs
threatlevel-unsorted/X/Auth/: Google.hs
threatlevel-unsorted/tests/: manual-browser-tests.hs
threatlevel-url/: package.yaml  stack.yaml  threatlevel-url.cabal
threatlevel-url/URL/: Core.hs  Parse.hs  Render.hs  TH.hs
threatlevel-web/: DOM.hs  HTML.hs  HTTP.hs  Hot.hs  PWA.hs  Server.hs  Static.hs  Trie.hs  Warp_Helpers.hs  Web.hs  WebStorage.hs  X.hs  XML.hs  nixpkgs-config-nixos.nix  package.yaml  shell.nix  threatlevel-web.cabal
threatlevel-web/DOM/: Core.hs  Event.hs  JS.hs
threatlevel-web/HTML/: Core.hs  Paste.hs
threatlevel-web/HTTP/: Common.hs  Header.hs  Response.hs
threatlevel-web/IndexedDB/: IDB.hs
threatlevel-web/JS/WebApis/: DOM.hs  Event.hs  WebComponents.hs
threatlevel-web/JW/: T.hs
threatlevel-web/SVG/: Attributes.hs  CSS.hs  Elements.hs  TH.hs
threatlevel-web/Server/: API.hs  Hot.hs  Response.hs  Run.hs  Static.hs  Wai.hs
threatlevel-web/Web/: CSS.hs  DSL.hs  Monad.hs  Prelude.hs  Response.hs  Secret.hs  X.hs
threatlevel-web/Web/Apis/: CustomElement.hs  DOM.hs  Event.hs  Fetch.hs  IDB.hs  PWA.hs  WebSocket.hs  WebStorage.hs
threatlevel-web/Web/DSL/: Helpers.hs
threatlevel-web/Web/Lib/: CSS_HTML.hs  HTML.hs  HTML_URL.hs  JS_CSS.hs  JS_HTML.hs  URL_CSS.hs
threatlevel-web/WebAPIs/: DOM.hs  WebComponents.hs
threatlevel-web/X/: Cookie.hs  DOM.hs  Prelude.hs  Template.hs  Widgets.hs
threatlevel-web/X/Auth/: Google.hs
threatlevel-web/X/Template/: Common.hs  V2.hs  V3.hs
threatlevel-web/X/Template/V3/: CSR.hs  Common.hs
threatlevel-web/X/Widgets/: Menu.hs
threatlevel-web/XML/: Core.hs  Render.hs  TH.hs
threatlevel-web/sample/: Main.hs
threatlevel-web/tests/: manual-browser-tests.hs
threatlevel-xml/: XML.hs
web/: CSP.hs  CSS.hs  Cookie.hs  HTML.hs  HTTP.hs  Hot.hs  JS.hs  PWA.hs  Pr.hs  Sessions.hs  Static.hs  TH.hs  Trie.hs  Warp_Helpers.hs  Web.hs  WebSockets.hs  X.hs  XML.hs  docker-repl-config.nix  local-deps.patch  nixpkgs-config-nixos.nix  package.yaml  shell.nix.patch  web.cabal
web-browser/: .add-sources  .gitignore  package.yaml  stack.yaml  web-browser.cabal
web-common/: package.yaml  web-common.cabal
web-css/: CSS.hs  package.yaml
web-js/: package.yaml  stack.yaml  web-js.cabal
web-url/: URL.hs  package.yaml  web-url.cabal
(+127 files in other folders)
