name:                web
version:             0.2.0.0
license:             GPL-2
license-file:        LICENSE
author:              Markus Läll
maintainer:          markus.l2ll@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Cookie
    , DOM.Event
    , DOM.JS
    , HTTP.Common
    , HTTP.Header
    , HTTP.Response
    , HTTP.Response.InlineFile
    , JS.Blaze
    , URL
    , Warp_Helpers
    , Web
    , Web.CSS
    , Web.SVG
    , Web.FRP
    , Web.HTML.Blaze
    , Web.HTML.Blaze.Bootstrap
    , Web.HTML
    , Web.Monad
  other-modules:
      Web.CSS.Internal
    , Web.CSS.Monad
    , Web.CSS.Shorthands
    , Web.CSS.Example
    , Web.HTML.Core
    , Web.HTML.Shorthands
    , Web.SVG.Elements
    , Web.SVG.Attributes
    , TH
  build-depends:
      base
    , aeson
    , blaze-builder
    , blaze-html
    , bytestring
    , case-insensitive
    , containers
    , file-embed
    , hs-minu
    , http-types
    , mime-types
    , mtl
    , network
    , network-simple
    , tagged
    , template-haskell
    , text
    , text-format-hs
    , unordered-containers
    , wai
    , warp
    , web-browser
    , web-js
  default-extensions:
      NoImplicitPrelude, TupleSections, TypeSynonymInstances
    , TypeOperators, ScopedTypeVariables, KindSignatures, Arrows
    , OverloadedStrings, ExtendedDefaultRules, NoMonomorphismRestriction
    , FlexibleInstances, FlexibleContexts, GADTs, MultiParamTypeClasses
    , DeriveDataTypeable, TemplateHaskell, QuasiQuotes, DeriveGeneric, DefaultSignatures
    , BangPatterns, TypeFamilies, StandaloneDeriving
    , DataKinds, PolyKinds, GeneralizedNewtypeDeriving
    , NamedFieldPuns
    , FunctionalDependencies
    , DeriveFunctor
    , EmptyDataDecls
    , UndecidableInstances
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  default-extensions:
      NoImplicitPrelude, TupleSections, TypeSynonymInstances
    , TypeOperators, ScopedTypeVariables, KindSignatures, Arrows
    , OverloadedStrings, ExtendedDefaultRules, NoMonomorphismRestriction
    , FlexibleInstances, FlexibleContexts, GADTs, MultiParamTypeClasses
    , DeriveDataTypeable, TemplateHaskell, QuasiQuotes, DeriveGeneric, DefaultSignatures
    , BangPatterns, TypeFamilies, StandaloneDeriving
    , DataKinds, PolyKinds, GeneralizedNewtypeDeriving
    , NamedFieldPuns
    , FunctionalDependencies
    , DeriveFunctor
    , EmptyDataDecls
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:
      base
    , aeson
    , blaze-builder
    , blaze-html
    , bytestring
    , case-insensitive
    , containers
    , hs-minu
    , http-types
    , lens
    , lens
    , mime-types
    , mtl
    , network
    , network-simple
    , tagged
    , template-haskell
    , text
    , text-format-hs
    , unordered-containers
    , wai
    , warp
