name:                web
version:             0.2.0.0
license:             GPL-2
license-file:        LICENSE
author:              Markus Läll
maintainer:          markus.l2ll@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Cookie
    , DOM.Event
    , DOM.JS
    , DOM
    , HTTP.Common
    , HTTP.Header
    , HTTP.Response
    , HTTP.Response.InlineFile
    , JS.Blaze
    , URL
    , Warp_Helpers
    , Web
    , CSS
    , CSS.MediaQuery
    , SVG
    , HTML.Blaze
    , HTML.Blaze.Bootstrap
    , HTML
    , Web.FRP
    , Web.Monad
    , Web.Static
  other-modules:
      Pr
    , CSS.Internal
    , CSS.Monad
    , CSS.Shorthands
    , CSS.Example
    , HTML.Core
    , HTML.Render
    , HTML.Shorthands
    , HTML.Shorthands.Paste
    , SVG.Elements
    , SVG.Attributes
    , DOM.Core
    , TH
  build-depends:
      base
    , aeson
    , blaze-builder
    , blaze-html
    , bytestring
    , case-insensitive
    , containers
    , dlist
    , file-embed
    , hs-minu
    , http-types
    , lens
    , mime-types
    , mtl
    , network
    , network-simple
    , tagged
    , template-haskell
    , text
    , text-format-hs
    , unordered-containers
    , wai
    , warp
    , warp-tls
    , web-browser
    , web-js
  default-extensions:
      NoImplicitPrelude, TupleSections, TypeSynonymInstances
    , TypeOperators, ScopedTypeVariables, KindSignatures, Arrows
    , OverloadedStrings, ExtendedDefaultRules, NoMonomorphismRestriction
    , FlexibleInstances, FlexibleContexts, GADTs, MultiParamTypeClasses
    , DeriveDataTypeable, TemplateHaskell, QuasiQuotes, DeriveGeneric, DefaultSignatures
    , BangPatterns, TypeFamilies, StandaloneDeriving
    , DataKinds, PolyKinds, GeneralizedNewtypeDeriving
    , NamedFieldPuns
    , FunctionalDependencies
    , DeriveFunctor
    , EmptyDataDecls
    , UndecidableInstances
    , InstanceSigs
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  default-extensions:
      NoImplicitPrelude, TupleSections, TypeSynonymInstances
    , TypeOperators, ScopedTypeVariables, KindSignatures, Arrows
    , OverloadedStrings, ExtendedDefaultRules, NoMonomorphismRestriction
    , FlexibleInstances, FlexibleContexts, GADTs, MultiParamTypeClasses
    , DeriveDataTypeable, TemplateHaskell, QuasiQuotes, DeriveGeneric, DefaultSignatures
    , BangPatterns, TypeFamilies, StandaloneDeriving
    , DataKinds, PolyKinds, GeneralizedNewtypeDeriving
    , NamedFieldPuns
    , FunctionalDependencies
    , DeriveFunctor
    , EmptyDataDecls
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:
      base
    , aeson
    , blaze-builder
    , blaze-html
    , bytestring
    , case-insensitive
    , containers
    , hs-minu
    , http-types
    , lens
    , lens
    , mime-types
    , mtl
    , network
    , network-simple
    , tagged
    , template-haskell
    , text
    , text-format-hs
    , unordered-containers
    , wai
    , warp
    , web
    , web-js
