name:                web
version:             0.2.0.0
license:             GPL-2
license-file:        LICENSE
author:              Markus Läll
maintainer:          markus.l2ll@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
      Cookie
    , DOM.Event
    , DOM.JS
    , DOM
    , HTTP.Common
    , HTTP.Header
    , HTTP.Response
    , HTTP.Response.InlineFile
    , URL
    , Warp_Helpers
    , Web
    , CSS
    , CSS.MediaQuery
    , SVG
    , HTML
    , HTML.Shorthands
    , Web.CSS
    , Web.Endpoint
    , Web.FRP
    , Web.Monad
    , Web.Response
    , XML
    , XML.Core
    , XML.Render
  other-modules:
      Pr
    , CSS.Internal
    , CSS.Monad
    , CSS.Shorthands
    , CSS.Example
    , HTML.Core
    , HTML.Shorthands.Paste
    , SVG.Elements
    , SVG.Attributes
    , DOM.Core
    , TH
  build-depends:
      base
    , aeson
    , async
    , blaze-builder
    , boomerang
    , bytestring
    , case-insensitive
    , containers
    , dlist
    , ds
    , file-embed
    , hashable
    , hs-minu
    , http-types
    , identifiers
    , lens
    , mime-types
    , mtl
    , network
    , network-simple
    , tagged
    , template-haskell
    , text
    , text-format
    , unordered-containers
    , wai
    , warp
    , warp-tls
    , web-browser
    , web-js
    , render
  default-extensions:
      Arrows
    , BangPatterns
    , ConstraintKinds
    , DataKinds
    , DefaultSignatures
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , EmptyDataDecls
    , ExtendedDefaultRules
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , KindSignatures
    , MultiParamTypeClasses
    , NamedFieldPuns
    , NoImplicitPrelude
    , NoMonomorphismRestriction
    , OverloadedStrings
    , PolyKinds
    , QuasiQuotes
    , RecursiveDo
    , ScopedTypeVariables
    , StandaloneDeriving
    , TemplateHaskell
    , TupleSections
    , TypeFamilies
    , TypeInType
    , TypeOperators
    , TypeSynonymInstances
  default-language:    Haskell2010

test-suite test
  default-language:    Haskell2010
  build-depends:
      hs-minu
    , web-js
    , web
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  default-extensions:
      Arrows
    , BangPatterns
    , ConstraintKinds
    , DataKinds
    , DefaultSignatures
    , DeriveDataTypeable
    , DeriveFunctor
    , DeriveGeneric
    , EmptyDataDecls
    , ExtendedDefaultRules
    , FlexibleContexts
    , FlexibleInstances
    , FunctionalDependencies
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , KindSignatures
    , MultiParamTypeClasses
    , NamedFieldPuns
    , NoImplicitPrelude
    , NoMonomorphismRestriction
    , OverloadedStrings
    , PolyKinds
    , QuasiQuotes
    , RecursiveDo
    , ScopedTypeVariables
    , StandaloneDeriving
    , TemplateHaskell
    , TupleSections
    , TypeFamilies
    , TypeInType
    , TypeOperators
    , TypeSynonymInstances
