cabal-version: 3.4
name:           identifiers
version:        0.1.0.0
category:       Web
homepage:       https://github.com/githubuser/identifiers#readme
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules: Identifiers
  other-modules:
      Identifiers.Infinite
      Paths_identifiers
  hs-source-dirs: .
  default-extensions:
      OverloadedStrings
      RankNTypes
      ScopedTypeVariables
      TypeFamilies
  build-depends:
      base
    , lens
    , mtl
    , text
  default-language: GHC2021

benchmark identifier-source
  type: exitcode-stdio-1.0
  main-is: identifier-source.hs
  other-modules:
      Paths_identifiers
  hs-source-dirs:
      benchmarks
  default-extensions:
      OverloadedStrings
      RankNTypes
      ScopedTypeVariables
      TypeFamilies
  ghc-options: -w -O2 -threaded
  build-depends:
      base
    , criterion
    , identifiers
    , lens
    , mtl
    , text
  default-language: GHC2021
