cabal-version: 3.4
name:           render
version:        0.1.0.0
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

library
  exposed-modules: Render
  hs-source-dirs: .
  default-extensions:
      OverloadedStrings
      ScopedTypeVariables
      TypeFamilies
      TypeOperators
  build-depends:
      base
    , bytestring
    , mtl
    , text
  default-language: GHC2021
