cabal-version: 3.4
name:           threatlevel-common
version:        0.1.0.0
category:       Language
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        BSD-3-Clause
build-type:     Simple

library
  exposed-modules:
      Common.TH
      Common.Lens
      Common.Prelude
  other-modules:
      Paths_threatlevel_common
  hs-source-dirs: .
  default-extensions:
      DataKinds
      FunctionalDependencies
      OverloadedStrings
      TemplateHaskell
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-type-defaults
  build-depends:
      base
    , data-default
    , fixedlist
    , identifiers
    , lens
    , template-haskell
    , text
  default-language: GHC2021
