cabal-version: 3.4
name:           threatlevel-css
version:        0.1.0.0
category:       Language
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        BSD-3-Clause
build-type:     Simple

library
  exposed-modules:
      CSS.DSL.MTL.Mono
      CSS.DSL.MTL.Effect
      CSS.Identifiers
      CSS.Syntax
      CSS.DSL
      CSS
  other-modules:
      CSS.DSL.Common
      CSS.Syntax.AST
      CSS.Syntax.Render
      CSS.TH
  hs-source-dirs: .
  default-extensions:
      DataKinds
      DefaultSignatures
      DerivingVia
      ExtendedDefaultRules
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RecursiveDo
      TemplateHaskell
      TypeFamilies
      TypeInType
      UndecidableInstances
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-type-defaults
  build-depends:
      base
    , dlist
    , identifiers
    , lens
    , mtl
    , neat-interpolation
    , render
    , template-haskell
    , text
    , threatlevel-common
  default-language: GHC2021
