cabal-version: 3.4
name:           threatlevel-js
version:        0.1.0.0
category:       Language
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        BSD-3-Clause
build-type:     Simple

library
  exposed-modules:
      JS.Syntax
      JS.DSL
      JS.DSL.Syntax
      JS.DSL.Core
      JS.DSL.MTL.Effect
      JS.DSL.MTL.Mono
      JS.Derive
      JS.Roundtrip
      JS.TH

      JS.Apis.EventLoop
      JS.Apis.Console

      JS.BuiltIns.JSON
      JS.BuiltIns.Date
      JS.BuiltIns.String
      JS.BuiltIns.Number
      JS.BuiltIns.Object
      JS.BuiltIns
      JS.BuiltIns.Full
      JS
  other-modules:
      JS.BuiltIns.Array
      JS.BuiltIns.Promise
      JS.DSL.MTL
      JS.Syntax.AST
      JS.Syntax.Render
      JS.Syntax.Reserved
  hs-source-dirs: .
  default-extensions:
      DataKinds
      DefaultSignatures
      DerivingVia
      ExtendedDefaultRules
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RecursiveDo
      TemplateHaskell
      TypeFamilies
      TypeInType
      UndecidableInstances
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-type-defaults
  build-depends:
      aeson
    , base
    , containers
    , data-default
    , hashable
    , identifiers
    , lens
    , mtl
    , render
    , template-haskell
    , text
    , threatlevel-common
    , time
    , unordered-containers
  default-language: GHC2021
