cabal-version: 3.4
name:          threatlevel-unsorted
version:       0.2.0.0
category:      Web
author:        Markus Läll
maintainer:    markus.l2ll@gmail.com
license:       BSD-3-Clause
build-type:    Simple

common lang
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingVia
    ExtendedDefaultRules
    FunctionalDependencies
    GADTs
    LambdaCase
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    QuasiQuotes
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    TypeInType
    UndecidableInstances
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-type-defaults


library
  import: lang
  exposed-modules:
    Web.Monad
    Server
    Server.Run
    Server.Static
    Server.API
    Server.Response
    Server.Hot
    Server.Wai
    Server.Sessions
    Server.WebSocket
    X.Cookie
  other-modules:
    CSP
    HTTP
    HTTP.Common
    HTTP.Header
    HTTP.Response
    HTTP.Response.InlineFile
    JW.T
    Template
    Template.Common
    Template.V2
    Template.V3
    Trie
    Widgets.Menu
    X
    X.Auth.Google
    X.Google.Maps
    X.Google.Spreadsheet
    X.Widgets
    Paths_threatlevel_unsorted
  hs-source-dirs: ./
  build-depends:
      base
    , threatlevel-web

test-suite test
  import: lang
  type: exitcode-stdio-1.0
  main-is: manual-browser-tests.hs
  other-modules: Paths_threatlevel_web
  hs-source-dirs: tests
  build-depends:
    , base
    , aeson
    , deriveJsonNoPrefix
    , rapid
    , warp
    , warp-tls
    , text
    , threatlevel-common
    , threatlevel-js
    , threatlevel-url
    , threatlevel-web
