cabal-version: 3.4
name:          threatlevel-unsorted
version:       0.2.0.0
category:      Web
author:        Markus Läll
maintainer:    markus.l2ll@gmail.com
license:       BSD-3-Clause
build-type:    Simple

common lang
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingVia
    ExtendedDefaultRules
    FunctionalDependencies
    GADTs
    LambdaCase
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    QuasiQuotes
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    TypeInType
    UndecidableInstances
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-type-defaults


library
  import: lang
  exposed-modules:
    CSP
    HTTP.Response
    Server.Response
    Server.Wai
    Server.Sessions
    Server.WebSocket
    X.Cookie
    JW.T
    Template
    Template.Common
    Template.V3
    ToPayload
    Widgets.Menu
    X.Google.Maps
    X.Google.Spreadsheet
    X.Widgets
    Paths_threatlevel_unsorted

    -- * Server API
    Trie
    Server.API
    Server.Hot
    X.Auth.Google
    Server.Run
    Server.Static
  hs-source-dirs: ./
  build-depends:
    , aeson
    , base
    , base64-bytestring
    , blaze-builder
    , boomerang
    , bytestring
    , cookie
    , cryptonite
    , deriveJsonNoPrefix
    , file-embed
    , hashable
    , http-client
    , http-types
    , lens
    , lens-aeson
    , memory
    , mime-types
    , mtl
    , process
    , random
    , rapid
    , render
    , template-haskell
    , text
    , threatlevel-common
    , threatlevel-css
    , threatlevel-js
    , threatlevel-url
    , threatlevel-web
    , time
    , transformers
    , unordered-containers
    , wai
    , wai-websockets
    , warp
    , warp-tls
    , websockets
    , wreq

-- test-suite test
--   import: lang
--   type: exitcode-stdio-1.0
--   main-is: manual-browser-tests.hs
--   other-modules: Paths_threatlevel_web
--   hs-source-dirs: tests
--   build-depends:
--     , base
--     , aeson
--     , rapid
--     , warp
--     , warp-tls
--     , text
--     , threatlevel-common
--     , threatlevel-js
--     , threatlevel-url
--     , threatlevel-web
