cabal-version: 3.4
name:           threatlevel-url
version:        0.0.1
synopsis:       Url
category:       Web
homepage:       https://github.com/eyeinsky/threatlevel#readme
bug-reports:    https://github.com/eyeinsky/threatlevel/issues
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        MIT
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/eyeinsky/threatlevel
  subdir: threatlevel-url

library
  exposed-modules:
      URL
      URL.Core
      URL.Parse
      URL.Render
      URL.TH
  other-modules:
      Paths_threatlevel_url
  hs-source-dirs: .
  default-extensions:
      DataKinds
      DefaultSignatures
      DerivingVia
      ExtendedDefaultRules
      FunctionalDependencies
      GADTs
      LambdaCase
      NoImplicitPrelude
      NoMonomorphismRestriction
      OverloadedStrings
      QuasiQuotes
      RecursiveDo
      TemplateHaskell
      TypeFamilies
      TypeInType
  build-depends:
      attoparsec
    , base
    , http-types
    , lens
    , mtl
    , render
    , template-haskell
    , text
  default-language: GHC2021
