cabal-version: 3.4
name:           threatlevel-web
version:        0.2.0.0
category:       Web
author:         Markus Läll
maintainer:     markus.l2ll@gmail.com
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple


common lang
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DerivingVia
    ExtendedDefaultRules
    FunctionalDependencies
    GADTs
    LambdaCase
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    QuasiQuotes
    RecursiveDo
    TemplateHaskell
    TypeFamilies
    TypeInType
    UndecidableInstances
  ghc-options: -Wall -Wno-name-shadowing -Wno-missing-signatures -Wno-type-defaults

library
  import: lang
  exposed-modules:
      Web.DSL
      Web.DSL.Helpers
      Web.Lib.CSS_HTML
      Web.Lib.HTML_URL
      Web.Lib.HTML
      Web.Lib.URL_CSS
      Web.Lib.JS_CSS
      Web.Apis.DOM
      Web.Apis.Fetch
      Web.Apis.IDB
      Web.Apis.PWA
      Web.Apis.CustomElement
      Web.Apis.WebSocket
      Web.X
      DOM.Core
      DOM.JS
      SVG
      SVG.CSS
      HTML
      XML
      XML.Core
      Web
      Web.Secret
  other-modules:
      HTML.Core
      HTML.Paste
      SVG.Attributes
      SVG.Elements
      SVG.TH
      Web.Apis.Event
      Web.Apis.WebStorage
      Web.Lib.JS_HTML
      Web.Prelude
      XML.Render
      XML.TH
      Paths_threatlevel_web
  hs-source-dirs: ./
  build-depends:
      aeson
    , base
    , base64-bytestring
    , bytestring
    , containers
    , cookie
    , cryptonite
    , data-default
    , directory
    , dlist
    , file-embed
    , hashable
    , http-types
    , identifiers
    , lens
    , lens-aeson
    , memory
    , mtl
    , neat-interpolation
    , process
    , rapid
    , render
    , template-haskell
    , text
    , threatlevel-common
    , threatlevel-css
    , threatlevel-js
    , threatlevel-url
    , time
    , transformers
    , unordered-containers
    , wai
    , wai-extra
    , wai-websockets
    , warp
    , warp-tls
    , websockets
    , wreq
